GNOME Bugzilla – Bug 696548
[WK2] Text encoding menu/dialog seem to be broken
Last modified: 2013-03-25 17:08:26 UTC
- Load a page - Open the gear menu - Go to the "Text encoding" section - Notice no options appear other than "Automatic" - Click "Other" - Try to manually set the encoding from the options in the list - Notice nothing happens
Created attachment 239775 [details] [review] encoding.diff
Pushed to master and gnome-3-8 with r-t approval. Closing.