ephy-encoding-dialog: make this work again

We were not resetting correctly the internal state when getting a NULL
encoding from WebKit, so the dialog would stop working after that.

https://bugzilla.gnome.org/show_bug.cgi?id=696548